WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58372
Cleaned up some Vector traits, and added missing Vector traits for handles
https://bugs.webkit.org/show_bug.cgi?id=58372
Summary
Cleaned up some Vector traits, and added missing Vector traits for handles
Geoffrey Garen
Reported
2011-04-12 13:37:31 PDT
Cleaned up some Vector traits, and added missing Vector traits for handles
Attachments
Patch
(7.42 KB, patch)
2011-04-12 13:41 PDT
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-04-12 13:41:28 PDT
Created
attachment 89266
[details]
Patch
Geoffrey Garen
Comment 2
2011-04-12 14:12:38 PDT
Committed
r83637
: <
http://trac.webkit.org/changeset/83637
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug