2011-04-12  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Sam Weinig.

        Cleaned up some Vector traits, and added missing Vector traits for handles
        https://bugs.webkit.org/show_bug.cgi?id=58372

        * heap/Local.h: Inherit from SimpleClassVectorTraits to avoid duplication.

        * heap/Strong.h: Ditto.

        * heap/Weak.h: Ditto.

        * parser/JSParser.cpp: Fixed a traits error. No test case because this
        particular trait is not currently exercised by the parser.

        * runtime/UString.h: No need to override canInitializeWithMemset, since
        our base class sets it to true.

        * wtf/VectorTraits.h: Inherit from VectorTraitsBase to avoid duplication.

        * wtf/text/WTFString.h: No need to override canInitializeWithMemset, since
        our base class sets it to true.
2011-04-12  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Cleaned up some Vector traits, and added missing Vector traits for handles
        https://bugs.webkit.org/show_bug.cgi?id=58372

        * platform/graphics/BitmapImage.h: Added a FIXME because the current
        Vector traits for FrameData are logically incorrect, but I couldn't find
        a place where this currently results in bad behavior, and it's not
        immediately obvious what the right solution is.


Canonical link: https://commits.webkit.org/73397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83637 268f45cc-cd09-0410-ab3c-d52691b4dbfc